# sgx-prover

./: .env  .gitignore  Cargo.toml  NOTICE  README.md
contracts/: foundry.toml
contracts/deployment/: tee_deploy_local_sepolia.json
contracts/script/: Deploy.s.sol
contracts/src/core/: AttestationVerifier.sol  ProverRegistry.sol
contracts/src/interfaces/: IProverRegistry.sol
contracts/src/utils/: BELE.sol
contracts/test/: AttestationVerifierTest.t.sol
crates/app-enclave/: Cargo.toml
crates/app-enclave/src/: lib.rs
crates/app-host/: Cargo.toml
crates/app-host/src/: lib.rs
crates/app-scroll-verifier/: Cargo.toml
crates/app-scroll-verifier/src/: lib.rs
crates/da-codec/: Cargo.toml
crates/da-codec/src/: batch_chunk.rs  batch_task.rs  error.rs  utils.rs
crates/da-codec/src/da_batch/: builder.rs  mod.rs  utils.rs
crates/executor/: Cargo.toml
crates/executor/src/: executor.rs  types.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  enclave_signer.rs  error.rs  lib.rs  methods.rs  prove.rs  server.rs  types.rs  utils.rs
crates/tee/: Cargo.toml
crates/tee/src/: attestation_report.rs  keypair.rs  lib.rs  prover_registry.rs  sgx_quote_builder.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: block_trace.rs  execution_node.rs  lib.rs  pob.rs  verifier.rs
scripts/: deploy_contract.sh  env.sh  test_contracts.sh
testdata/: scroll-mainnet-v4-commit-333640.calldata  scroll-mainnet-v4-commit-334671.calldata  scroll-mainnet-v4-finalize-333640.calldata  scroll-mainnet-v4-finalize-334671.calldata
