[package]
name = "app-scroll-verifier"
version.workspace = true
edition.workspace = true

[features]
tstd_enclave = ["automata-sgx-sdk/tstd_enclave", "tee/tstd_enclave"]

[lib]
name = "app_scroll_verifier"
crate-type = ["staticlib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
scroll-verifier.workspace = true
scroll-executor.workspace = true
scroll-da-codec.workspace = true
tee.workspace = true

hex.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
env_logger.workspace = true
log.workspace = true
base.workspace = true
automata-sgx-sdk.workspace = true